--- a/index.html
+++ b/index.html
@@ -4,10 +4,76 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <script src="./script.js" defer></script>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="image-container">
+            <div class="logo">
+                <img src="./assets/odin-lined.png" alt="odin logo" class="logo-img">
+                <h1 class="logo-text">ODIN</h1>
+            </div>
+            <div class="artist">
+                <a href="https://www.freepik.com/free-ai-image/ancient-north-european-god-freyr-illustration_122396585.htm#fromView=search&page=1&position=3&uuid=42fe5b3f-0eec-44aa-a2fe-1d5552846fc4">
+                    Image by vector_corp on Freepik
+                </a>
+            </div>
+        </div>
+        <div class="form-container">
+            <p class="statement">
+                This is not a real online service! You know you need
+                something like this in your life to help you realize
+                your deepest dreams.
+                <br>
+                Sign up <em>now</em> to get started.
+                <br><br>
+                You <em>know</em> you want to.
+            </p>
+            <h3>Let's do this!</h3>
+            <form action="#">
+                <fieldset>
+                    <div class="input-row">
+                        <div class="input">
+                            <label for="first_name">FIRST NAME</label>
+                            <input type="text" id="first_name" required>
+                        </div>
+                        <div class="input">
+                            <label for="last_name">LAST NAME</label>
+                            <input type="text" id="last_name">
+                        </div>
+                    </div>
+
+                    <div class="input-row">
+                        <div class="input">
+                            <label for="email">EMAIL</label>
+                            <input type="email" id="email" required>
+                        </div>
+                        <div class="input">
+                            <label for="phone">PHONE NUMBER</label>
+                            <input type="number" id="phone" placeholder="+2347012345678" pattern="^\+234\d{10}$" required>
+                        </div>
+                    </div>
+
+                    <div class="input-row">
+                        <div class="input">
+                            <label for="password">PASSWORD</label>
+                            <input type="text" id="password"  required>
+                        </div>
+                        <div class="input">
+                            <label for="confirm">CONFIRM PASSWORD</label>
+                            <input type="text" id="confirm">
+                        </div>
+                    </div>
+                </fieldset>
+
+                <button type="submit">Create Account</button>
+                <div class="login">Already have an account? <a href="#" class="login-link">Log in</a></div>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
